<resources>
    <string name="app_name">SICOSIS</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="tvTitle">SICOSIS</string>
    <string name="info_camisa1">Esta camiseta es de diseñador, hecha en ceda de oveja virgen
        para la comodidad de las personas que les gusta lucir un buen estilo y sentirse comodo
        al mismo tiempo
    </string>

<!---VISTA PRODUCTOS-->
    <string name="imagenProducto"></string>
    <string name="tituloProducto">Camiseta DIM 110 Años</string>
    <string name="descripcionProducto">299.960,00</string>
    <string name="descripciontipoProducto">Hombre Performance</string>
    <string name="tallaProducto">Talla</string>
    <string name="tallaProductoXS">XS</string>
    <string name="tallaProductoS">S</string>
    <string name="tallaProductoM">M</string>
    <string name="tallaProductoL">L</string>
    <string name="tallaProductoXL">XL</string>
    <string name="agregarCarrito">AGREGAR AL CARRITO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>