<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imagenProducto"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/camiseta_blanca" />

            <ImageView
                android:id="@+id/ic_volver"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="349dp"
                android:layout_weight="1"
                android:backgroundTint="#BC0B0B"
                android:contentDescription="Talla"
                android:padding="5dp"
                android:src="@drawable/ic_volver" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tituloProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/tituloProducto"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/tituloProducto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/descripcionProducto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/descripcionProducto"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/descripcionProducto" />

                <TextView
                    android:id="@+id/descripciontipoProducto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/descripciontipoProducto"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    tools:text="@string/descripciontipoProducto" />
            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/tallaProducto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tallaProducto"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="@string/tallaProducto" />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/bordes"
                    android:backgroundTint="#BC0B0B"
                    android:contentDescription="Talla"
                    android:src="@drawable/regla" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tipoTallaXS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/tallaProductoXS"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/tallaProductoXS" />

                <TextView
                    android:id="@+id/tipoTallaS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/tallaProductoS"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/tallaProductoS" />

                <TextView
                    android:id="@+id/tipoTallaM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/tallaProductoM"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/tallaProductoM" />

                <TextView
                    android:id="@+id/tipoTallaL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/tallaProductoL"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/tallaProductoL" />

                <TextView
                    android:id="@+id/tipoTallaxl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/tallaProductoXL"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/tallaProductoXL" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:background="@color/black"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/agregarCarrito"
                    android:layout_width="367dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:text="@string/agregarCarrito"
                    android:textAlignment="viewStart"
                    tools:text="@string/agregarCarrito" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bordes"
                    android:backgroundTint="#BC0B0B"
                    android:contentDescription="Talla"
                    android:padding="5dp"
                    android:src="@drawable/bolso" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>